force-app/main/default/objects/Dispatch_Order__c/Dispatch_Order__c.object-meta.xml
<CustomObject>
    <label>Orden de Despacho</label>
    <nameField>
        <displayFormat>OD-{00000}</displayFormat>
        <label>Código</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ordenes de Despacho</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>