force-app/main/default/objects/Dispatch_Order__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Factura</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Ordenes de Despacho</relationshipLabel>
    <relationshipName>Ordenes_de_Despacho</relationshipName>
    <type>Lookup</type>
</CustomField>