force-app/main/default/objects/Dispatch_Order__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pendiente de despacho</fullName>
            </value>
            <value>
                <fullName>Despachada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>