force-app/main/default/objects/Dispatch_Order__c/validationRules/Prevent_Update.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Update</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(  Purchase_Order__c  )</errorConditionFormula>
    <errorMessage>El campo no puede ser editado.</errorMessage>
</ValidationRule>